--- a/style/main.css
+++ b/style/main.css
@@ -2,7 +2,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: #faf8ef;
+  background: #ffffff;
   color: #776e65;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
@@ -149,7 +149,7 @@ hr {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
-  background: #bbada0;
+  background: #F5F5F5;
   border-radius: 6px;
   width: 500px;
   height: 500px;
@@ -213,8 +213,8 @@ hr {
   height: 106.25px;
   margin-right: 15px;
   float: left;
-  border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35); }
+  border-radius: 53px;;
+  background: rgba(255, 255, 255, 1); }
   .grid-cell:last-child {
     margin-right: 0; }
 
@@ -292,7 +292,7 @@ hr {
     top: 364px; }
 
 .tile {
-  border-radius: 3px;
+  border-radius: 53px;
   background: #eee4da;
   text-align: center;
   font-weight: bold;
@@ -303,59 +303,61 @@ hr {
   -webkit-transition-property: top, left;
   -moz-transition-property: top, left; }
   .tile.tile-2 {
-    background: #eee4da;
+    color: #ffffff;
+    background: #B4D8E7;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 {
-    background: #ede0c8;
+    color: #ffffff;
+    background: #B0E57C;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 {
-    color: #f9f6f2;
-    background: #f2b179; }
+    color: #ffffff;
+    background: #FFF0AA; }
   .tile.tile-16 {
-    color: #f9f6f2;
-    background: #f59563; }
+    color: #ffffff;
+    background: #FFAEAE; }
   .tile.tile-32 {
-    color: #f9f6f2;
-    background: #f67c5f; }
+    color: #ffffff;
+    background: #06A2CB; }
   .tile.tile-64 {
-    color: #f9f6f2;
-    background: #f65e3b; }
+    color: #ffffff;
+    background: #218559; }
   .tile.tile-128 {
-    color: #f9f6f2;
-    background: #edcf72;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
+    color: #ffffff;
+    background: #EBB035;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
     font-size: 45px; }
     @media screen and (max-width: 480px) {
       .tile.tile-128 {
         font-size: 25px; } }
   .tile.tile-256 {
-    color: #f9f6f2;
-    background: #edcc61;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
+    color: #ffffff;
+    background: #DD1E2F;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
     font-size: 45px; }
     @media screen and (max-width: 480px) {
       .tile.tile-256 {
         font-size: 25px; } }
   .tile.tile-512 {
-    color: #f9f6f2;
-    background: #edc850;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
+    color: #ffffff;
+    background: #E0CC97;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
     font-size: 45px; }
     @media screen and (max-width: 480px) {
       .tile.tile-512 {
         font-size: 25px; } }
   .tile.tile-1024 {
-    color: #f9f6f2;
-    background: #edc53f;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    color: #ffffff;
+    background: #EC799A;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
     font-size: 35px; }
     @media screen and (max-width: 480px) {
       .tile.tile-1024 {
         font-size: 15px; } }
   .tile.tile-2048 {
-    color: #f9f6f2;
-    background: #edc22e;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    color: #ffffff;
+    background: #9F0251;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
     font-size: 35px; }
     @media screen and (max-width: 480px) {
       .tile.tile-2048 {
@@ -484,7 +486,7 @@ hr {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
-    background: #bbada0;
+    background: #ffffff;
     border-radius: 6px;
     width: 280px;
     height: 280px;
